Stripes in Cycles Viewport and Render #33821

Closed
opened 2013-01-10 15:29:26 +01:00 by Sebastian Koenig · 3 comments

%%%--- Operating System, Graphics card ---
OSX 10.8.2, GT120

- Blender version with error, and version that worked ---

This bug only occurred after r53703

- Short description of error ---
  1. Area Lamps render too bright, compared to the way they looked before that revision.

  2. Rendering with area lamps creates weird stripes in viewport and render.
    (Also, area lamps now seem to go crazy with fireflies.)

    • Steps for others to reproduce the error (preferably based on attached .blend file) ---

Actually it's kind of two bugs. First, Area Lamps are way too bright. In a simple scene, lit with 2 area lights, everything is suddenly too bright. I have created the attached file with trunk, just one or two revision numbers before r53703.
Then if I lower the intensity of the 2 area lamps in the scene to 1, lighting is back to normal, but i see stripes in the viewport and render. Confirmed by Dingto in IRC.%%%

%%%--- Operating System, Graphics card --- OSX 10.8.2, GT120 - Blender version with error, and version that worked --- This bug only occurred after r53703 - Short description of error --- 1. Area Lamps render too bright, compared to the way they looked before that revision. 2. Rendering with area lamps creates weird stripes in viewport and render. (Also, area lamps now seem to go crazy with fireflies.) - Steps for others to reproduce the error (preferably based on attached .blend file) --- Actually it's kind of two bugs. First, Area Lamps are way too bright. In a simple scene, lit with 2 area lights, everything is suddenly too bright. I have created the attached file with trunk, just one or two revision numbers before r53703. Then if I lower the intensity of the 2 area lamps in the scene to 1, lighting is back to normal, but i see stripes in the viewport and render. Confirmed by Dingto in IRC.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33821
No description provided.