Fix #33821: cycles background intensity fix had uninitialized memory usage for area lights.